--- a/Index.html
+++ b/Index.html
@@ -7,29 +7,43 @@
 <meta charset="UTF-8">
 <meta name="discription" content="adcet.in, adcet,timetable adcet,cse adcet,ADCET CSE, CSE ADCET"/>
 <link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
+<link rel = "stylesheet" href="style.css">
 </head>
-<body class="WebContainer"> 
-    <!--
-<p>
-    &nbsp;
-<p align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</p> </font>
-<p align = "center"><a href="Timetable_A.html" target="_self"><font face="Lobster" color="black"> Division A</a></p></font>
-<p align = "center"><a href="Timetable_B.html" target="_self"> <font face="Lobster" color="black"> Division B</a></p></font>
-<p>&nbsp;</p><p>&nbsp;</p>
-
-<p>&nbsp;</p><p>&nbsp;</p> 
-<footer class="footer">
- <div class=texts>
-     <h3>follow us on :</h3>
- </div>    
-<div class=icons>
-<i class="social-icon fa fa-facebook" href="https://www.facebook.com/"></i>
-<i class="social-icon fa fa-envelope-square" href="mailto:shivamnimbalkar3901@gmail.com"></i>   
-<i class="social-icon fa fa-instagram" href="https://www.instagram.com/shiv"></i>
-<i class="social-icon fa fa-linkedin" href="https://www.linkedin.com/"></i> 
-</div>
+<body>
+<h2>SELECT YOUR DIVISION</h2>
+<div class="selector-menu">
+<ul>
+<li><a href="Timetable_A.html" target="_self" alt="Timetable Div A"> Division A</a></li>
+<li><a href="Timetable_B.html" target="_self" alt="Timetable Div B"> Division B</a></li>
+</ul>
+</div> 
+<footer class="footer">     
+    <nav class="navigation">
+        <div class="leftNav">
+          <ul>
+            <li>Follow us on:</li>
+                <li><a href="https://www.facebook.com/ShivamNimbalkar3901/"target="_blank" ><i class="social-icon fa fa-facebook fa-1x" ></i></a></li>
+                <li><a href="mailto:shivamnimbalkar3901@gmail.com"target="_blank"><i class="social-icon fa fa-envelope-square fa-1x" ></i></a>  </li> 
+                <li><a href="https://www.instagram.com/shivam_3901_/"target="_blank"><i class="social-icon fa fa-instagram fa-1x" ></i></a></li>
+                <li><a href="https://cutt.ly/vm31hcz"target="_blank"><i class="social-icon fa fa-linkedin fa-1x" ></i></a></li>
+          </ul>
+        </div>
+        <div class=" centerNav">
+                <ul>
+        <li>last Updated on :  1 Sep 2021 👨‍🔧</li>
+        </ul>
+        </div>
+        <div class="rightNav">  
+          <ul>
+              <li>Designed & Maintained by ShivamNimbalkar👨‍💻</li>
+             <li>© All Rights Reserved</li> 
+          </ul>
+        </div>
+    
+    </nav>
 </footer>
--->
+<!--
 <h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>
+-->
 </body>
 </html>
