--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -4,41 +4,17 @@
 <link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
 <head> <title> TY Time-Table 2021 Division B </title>
     <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/8fd47592c4.js" crossorigin="anonymous"></script>
     <meta name="discription" content="adcet.in, adcet,timetable adcet,cse adcet,ADCET CSE, CSE ADCET"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
-
-    <style>
-        .WebContainer{
-    width:auto;
-    height:auto;
-     }
-         body{
-            background-color: #F8F2F2;
-        }
-    table {
-            background-color: rgb(255, 255, 255);
-        }
-        .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 11%;
-  background-color:#172337;
- }
-</style>
-<body class="WebContainer">
-    <p>&nbsp;</p>
-    <h3 align="center"style="text-shadow: 4px 4px 4px #aaa;">TY Time-Table 2021 Sem V</h3>
-    <h4 align="center"style="text-shadow: 4px 4px 4px #aaa;"> Div - B </h4>
-    <!--
-<table border=1 cellspacing="1" cellpadding="10" align = "center"  border color="black" >
-
-<p>&nbsp;</p>
-<tr align ="center">
+<body>
+    <h2>TY Time-Table 2021 Sem V</h2>
+    <h2> Div - B </h2>
+<table >
+<tr class="top">
     <th>Time </th>
     <th>MONDAY</th>
     <th>TUESDAY</th> 
@@ -47,63 +23,79 @@
     <th>FRIDAY</th>
     <th>SATURDAY</th>
 </tr>
-<tr align ="center">
+<tr>
     <td>9:15 - 10:15 </td>
-    <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> 
-    <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> 
-    <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> 
-    <td> <a href="https://bit.ly/2VX1ams"target="_blank"><font  color="Black">SPC</font></a></td> 
-    <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td></font> 
-    <td rowspan="2"><a href="https://bit.ly/2VX1ams"target="_blank"><font  color="Black">T8 SPC</font></a></td></font>
+    <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> 
+    <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> 
+    <td> <a href="https://bit.ly/3egnjlY"target="_blank">APC</a></td> 
+    <td> <a href="https://bit.ly/2VX1ams"target="_blank">SPC</a></td> 
+    <td> <a href="https://bit.ly/3AYKr2d"target="_blank">CGMT</a></td> 
+    <td rowspan="2"><a href="https://bit.ly/2VX1ams"target="_blank">T8 SPC</a></td>
 </tr>      
-<tr align ="center"><td>10:15 - 11:15 </td>
-    <td> <a href="https://bit.ly/2VX1ams"target="_blank"><font  color="Black">SPC</font></a></td> 
-    <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> 
-    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> 
-    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> 
-    <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td>
+<tr>
+    <td>10:15 - 11:15 </td>
+    <td> <a href="https://bit.ly/2VX1ams"target="_blank"> SPC</a></td> 
+    <td> <a href="https://bit.ly/wpty2021"target="_blank"> IoT</a></td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td> 
+    <td> <a href="https://bit.ly/wpty2021"target="_blank">WP</a></td>
     </tr>
-<tr align ="center"><td>11:30 - 12:30 </td>
-    <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> 
-    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">TW</font></a></td> 
-    <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> 
-    <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td>
-     <td> <a href="https://bit.ly/2VX1ams"target="_blank"><font  color="Black">SPC</font></a></td> 
-     <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>
+<tr>
+    <td>11:30 - 12:30 </td>
+    <td> <a href="https://bit.ly/wpty2021"target="_blank">WP</a></td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">TW</a></td> 
+    <td> <a href="https://bit.ly/wpty2021"target="_blank">IoT</a></td> 
+    <td> <a href="https://bit.ly/3kdN5eI"target="_blank">Cyber Security</a> </td>
+     <td> <a href="https://bit.ly/2VX1ams"target="_blank">SPC</a></td> 
+     <td rowspan="2"> <a href=""target="_blank">Mini-Project</a></td>
 </tr>     
-<tr align ="center" ><td>12:30 - 13:30 </td>
-    <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td> 
-    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td>
-    <td> <a href="https://bit.ly/3k9oDLr"target="_blank"><font  color="Black">Cyber Security</font></a></td> 
-    <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> 
-    <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td>
+<tr>
+    <td>12:30 - 13:30 </td>
+    <td> <a href="https://bit.ly/3AYKr2d"target="_blank">CGMT</a></td> 
+    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">DAA</a></td>
+    <td> <a href="https://bit.ly/3k9oDLr"target="_blank">Cyber Security</a></td> 
+    <td> <a href="https://bit.ly/wpty2021"target="_blank">IoT</a></td> 
+    <td> <a href="https://bit.ly/3hCOREA"target="_blank">Cyber Security</a></td>
 </tr>  
-<tr align ="center" ><td>14:15 - 16:15 </td>
-    <td> <a href=""target="_blank"><font  color="Black"></font></a></td> 
-    <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> 
-    <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> 
-    <td> <a href="https://bit.ly/3xEsZOl"target="_blank"><font  color="Black">CGMT LAB</font></a></td>
-    <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">TW(T)</font></a></td> 
-    <td><font  color="Black">-</font></td>
+<tr>
+    <td>14:15 - 16:15 </td>
+    <td>-</td> 
+    <td> <a href="https://bit.ly/wpty2021"target="_blank">WP LAB T8</a></td> 
+    <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank">DAA LAB T8 </a></td> 
+    <td> <a href="https://bit.ly/3xEsZOl"target="_blank">CGMT LAB</a></td>
+    <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank">TW(T)</a></td> 
+    <td>-</td>
 </tr>
-</font>
+
 </table>
--->
-<h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>
 <!--
-<div class="footer">
-<p>&nbsp;</p><p>&nbsp;</p> 
-<p>&nbsp;</p><p>&nbsp;</p> 
-<p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="3">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="#D6D6D6"size="3">ShivamNimbalkar</font></a></p></font>
-<p style=" position: absolute;bottom: 1px; right: 160px;"><font face="Lobster" color="#D6D6D6"size="3">© All Rights Reserved</p> </font>
-<p style="position: absolute;bottom: -5px; left: 625px;"><font face="Lobster" color="#D6D6D6"size="1">Last Updated: 25 August 2021</p></font>
-<p>
-<p style="position: absolute;bottom: 35px;left: 1px;"><font face="Lobster" color="#D6D6D6">Follow us on :</p></font>
-<a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 49px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 95px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 142px;"></a> 
-</p>
-</div>
-<p align="center"style="text-shadow: 4px 4px 4px #aaa;">Note: All the lecture links are provided by valid sources but may vary depending if new links are created or updated.</p>
+<h1 align="center">face="Poiret One"> Under Maintanance:</h1>
 -->
+<footer class="footer">     
+    <nav class="navigation">
+        <div class="leftNav">
+          <ul>
+            <li>Follow us on:</li>
+                <li><a href="https://www.facebook.com/ShivamNimbalkar3901/"target="_blank" ><i class="social-icon fa fa-facebook fa-1x" ></i></a></li>
+                <li><a href="mailto:shivamnimbalkar3901@gmail.com"target="_blank"><i class="social-icon fa fa-envelope-square fa-1x" ></i></a>  </li> 
+                <li><a href="https://www.instagram.com/shivam_3901_/"target="_blank"><i class="social-icon fa fa-instagram fa-1x" ></i></a></li>
+                <li><a href="https://cutt.ly/vm31hcz"target="_blank"><i class="social-icon fa fa-linkedin fa-1x" ></i></a></li>
+          </ul>
+        </div>
+        <div class=" centerNav">
+                <ul>
+        <li>last Updated on :  1 Sep 2021 👨‍🔧</li>
+        </ul>
+        </div>
+        <div class="rightNav">  
+          <ul>
+              <li>Designed & Maintained by ShivamNimbalkar👨‍💻</li>
+             <li>© All Rights Reserved</li> 
+          </ul>
+        </div>
+    
+    </nav>
+
 </body>
 
 </html>
