--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -71,7 +71,7 @@
 <!--
 <h1 align="center">face="Poiret One"> Under Maintanance:</h1>
 -->
-<h4 id=mod>Click here to login in for <a href="150.129.131.190/moodle/" target="_blank">Moodle</a></h4>
+<h4 id=mod>Click here to login in for <a href="https://bit.ly/2WT0nnl" target="_blank">Moodle</a></h4>
 <footer class="footer">     
     <nav class="navigation">
         <div class="leftNav">
