--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,7 @@
         </div>
     
     </nav>
+    <h4 id=mod>Click here to login in for <a href="https://bit.ly/2WT0nnl" target="_blank">Moodle</a></h4>
 </footer>
 <!--
 <h1 align="center"><font face="Poiret One"> Under Maintanance:</font></h1>
