--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -43,7 +43,7 @@
 <tr>
     <td>11:30 - 12:30 </td>
     <td> <a href="https://bit.ly/wpty2021"target="_blank">WP</a></td> 
-    <td> <a href="https://bit.ly/DAA_TY_B"target="_blank">TW</a></td> 
+    <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank">TW</a></td> 
     <td> <a href="https://bit.ly/wpty2021"target="_blank">IoT</a></td> 
     <td> <a href="https://bit.ly/3kdN5eI"target="_blank">Cyber Security</a> </td>
      <td> <a href="https://bit.ly/2VX1ams"target="_blank">SPC</a></td> 
