--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
 <html>
-<head> <title> TY Time-Table 2021 Division A </title>
+<html lang="en">    
+<head> 
+    <title> TY Time-Table 2021 Division A </title>
     <meta name="discription" content="adcet.in, adcet,timetable adcet,cse adcet,ADCET CSE, CSE ADCET"/>
     <script src="https://kit.fontawesome.com/8fd47592c4.js" crossorigin="anonymous"></script>
     <link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
@@ -10,12 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel = "stylesheet" href="style.css" type="text/css">
 </head>
-
 <body>
 <h2>TY Time-Table 2021 Sem V</h2>
 <h2> Div - A </h2>
 <table>
-    <div class="b">
 <tr>
     <th>Time </th>
     <th>MONDAY</th> 
@@ -25,7 +24,6 @@
     <th>FRIDAY</th> 
     <th>SATURDAY</th>
 </tr>
-</div>
 <tr>
     <td>9:15 - 10:15 </td>
     <td> <a href=""target="_self">  OE</a></td>
