--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">    
 <head> 
     <title> TY Time-Table 2021 Division A </title>
@@ -26,45 +25,45 @@
 </tr>
 <tr>
     <td>9:15 - 10:15 </td>
-    <td> <a href=""target="_self">  OE</a></td>
-     <td> <a href=""target="_self">  OE</a></td>
+    <td> <a href="" target="_self">  OE</a></td>
+     <td> <a href="" target="_self">  OE</a></td>
       <td> <a href="" target="_self">  OE</a></td> 
-      <td> <a href=""target="_self">  SPC</a></td> 
-      <td> <a href=""target="_self">  AP</a></td>
-      <td rowspan="2"> <a href=""target="_self">  T3 SPC <br> T4 SPC </a></td> 
+      <td> <a href="" target="_self">  SPC</a></td> 
+      <td> <a href="" target="_self">  AP</a></td>
+      <td rowspan="2"> <a href="" target="_self">  T3 SPC <br> T4 SPC </a></td> 
 </tr>         
 <tr>
     <td>10:15 - 11:15 </td>
-    <td> <a href=""target="_self">  SPC</a></td> 
-    <td> <a href=""target="_self">  IoT</a></td> 
-    <td> <a href=""target="_self">  DAA</a></td>
-     <td> <a href=""target="_self">  DAA</a></td> 
-     <td> <a href=""target="_self">   Cyber Security</a><br> ADHOC <br> Storage Networks </td>
+    <td> <a href="" target="_self">  SPC</a></td> 
+    <td> <a href="" target="_self">  IoT</a></td> 
+    <td> <a href="" target="_self">  DAA</a></td>
+     <td> <a href="" target="_self">  DAA</a></td> 
+     <td> <a href="" target="_self">   Cyber Security</a><br> ADHOC <br> Storage Networks </td>
 </tr>
 <tr>
     <td>11:30 - 12:30 </td>
-    <td> <a href=""target="_self">  WP</a></td>
-    <td> <a href=""target="_self">  DAA</a></td> 
-    <td> <a href=""target="_self">  IoT</a></td> 
-    <td> <a href=""target="_self">  Cyber Security</a> <br> ADHOC <br> Storage Networks </td> 
-    <td> <a href=""target="_self">  Technical Writting</a></td> 
-    <td rowspan="2"> <a href=""target="_self">  Mini-Project</a></td>   
+    <td> <a href="" target="_self">  WP</a></td>
+    <td> <a href="" target="_self">  DAA</a></td> 
+    <td> <a href="" arget="_self">  IoT</a></td> 
+    <td> <a href="" target="_self">  Cyber Security</a> <br> ADHOC <br> Storage Networks </td> 
+    <td> <a href="" target="_self">  Technical Writting</a></td> 
+    <td rowspan="2"> <a href="" target="_self">  Mini-Project</a></td>   
 </tr>  
 <tr>
     <td>12:30 - 13:30 </td>
-    <td> <a href=""target="_self">  AP</a></td>
-     <td> <a href=""target="_self">  SPC</a></td>
-     <td> <a href=""target="_self">  Cyber Security</a><br> ADHOC <br> Storage Networks </td> 
-     <td> <a href=""target="_self">  IoT</a></td>
-      <td> <a href=""target="_self">  WP</a></td>  
+    <td> <a href="" target="_self">  AP</a></td>
+     <td> <a href="" target="_self">  SPC</a></td>
+     <td> <a href="" target="_self">  Cyber Security</a><br> ADHOC <br> Storage Networks </td> 
+     <td> <a href="" target="_self">  IoT</a></td>
+      <td> <a href="" target="_self">  WP</a></td>  
 </tr>
 <tr>
     <td>14:15 - 16:15 </td>
-    <td> <a href=""target="_self">  T1 DAA <br>T2 WP<br>T3 AP<br>T4 TW </a></td> 
-    <td> <a href=""target="_self">  T1 AP <br> T2 DAA <br>T3 TW <br>T4 WP</a></td> 
-    <td> <a href=""target="_self">  T1 SPC <br> T2 AP </a></td> 
-    <td> <a href=""target="_self">  T1 TW(14:15) <br>T2 TW(15:15) <br> T4 AP <br>T3 DAA </a></td>
-    <td> <a href=""target="_self">  T1 WP <br>T2  SPC <br>T3 WP<br> T4 DAA </a></td>
+    <td> <a href="" target="_self">  T1 DAA <br>T2 WP<br>T3 AP<br>T4 TW </a></td> 
+    <td> <a href="" target="_self">  T1 AP <br> T2 DAA <br>T3 TW <br>T4 WP</a></td> 
+    <td> <a href="" target="_self">  T1 SPC <br> T2 AP </a></td> 
+    <td> <a href="" target="_self">  T1 TW(14:15) <br>T2 TW(15:15) <br> T4 AP <br>T3 DAA </a></td>
+    <td> <a href="" target="_self">  T1 WP <br>T2  SPC <br>T3 WP<br> T4 DAA </a></td>
      <td>  -</td>
 </tr>
 
@@ -81,13 +80,13 @@
         <div class="leftNav">
           <ul>
             <li>Follow us on:</li>
-                <li><a href="https://www.facebook.com/ShivamNimbalkar3901/"target="_self" ><i class="social-icon fa fa-facebook fa-1x" ></i></a></li>
-                <li><a href="mailto:shivamnimbalkar3901@gmail.com"target="_self"><i class="social-icon fa fa-envelope-square fa-1x" ></i></a>  </li> 
-                <li><a href="https://www.instagram.com/shivam_3901_/"target="_self"><i class="social-icon fa fa-instagram fa-1x" ></i></a></li>
-                <li><a href="https://cutt.ly/vm31hcz"target="_self"><i class="social-icon fa fa-linkedin fa-1x" ></i></a></li>
+                <li><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_self" ><i class="social-icon fa fa-facebook fa-1x" ></i></a></li>
+                <li><a href="mailto:shivamnimbalkar3901@gmail.com" target="_self"><i class="social-icon fa fa-envelope-square fa-1x" ></i></a>  </li> 
+                <li><a href="https://www.instagram.com/shivam_3901_/" target="_self"><i class="social-icon fa fa-instagram fa-1x" ></i></a></li>
+                <li><a href="https://cutt.ly/vm31hcz" target="_self"><i class="social-icon fa fa-linkedin fa-1x" ></i></a></li>
           </ul>
         </div>
-        <div class=" centerNav">
+        <div class="centerNav">
                 <ul>
         <li>last Updated on :  1 Sep 2021 👨‍🔧</li>
         </ul>
