--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,8 @@
 <h2>SELECT YOUR DIVISION</h2>
 <div class="selector-menu">
 <ul>
-<li><a href="Timetable_A.html" target="_self" alt="Timetable Div A"> Division A</a></li>
-<li><a href="Timetable_B.html" target="_self" alt="Timetable Div B"> Division B</a></li>
+<li><a href="Timetable_A.html" target="_self"> Division A</a></li>
+<li><a href="Timetable_B.html" target="_self"> Division B</a></li>
 </ul>
 </div> 
 <footer class="footer">     
