--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -44,7 +44,7 @@
     <td>11:30 - 12:30 </td>
     <td> <a href="" target="_self">  WP</a></td>
     <td> <a href="" target="_self">  DAA</a></td> 
-    <td> <a href="" arget="_self">  IoT</a></td> 
+    <td> <a href="" target="_self">  IoT</a></td> 
     <td> <a href="" target="_self">  Cyber Security</a> <br> ADHOC <br> Storage Networks </td> 
     <td> <a href="" target="_self">  Technical Writting</a></td> 
     <td rowspan="2"> <a href="" target="_self">  Mini-Project</a></td>   
@@ -99,5 +99,6 @@
         </div>
     
     </nav>
+</footer>
 </body>
 </html>
