--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel = "icon" href = "my-timetable.png" type = "image/x-icon">
-<head> <title> TY Time-Table 2021 Division B </title>
-    <meta charset="UTF-8">
+<link rel = "icon" href = "my-timetable.png" type = "image/x-icon"/>
+<head>
+    <title> TY Time-Table 2021 Division B </title>
+    <meta charset="UTF-8"/>
     <script src="https://kit.fontawesome.com/8fd47592c4.js" crossorigin="anonymous"></script>
     <meta name="discription" content="adcet.in, adcet,timetable adcet,cse adcet,ADCET CSE, CSE ADCET"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -94,6 +95,7 @@
         </div>
     
     </nav>
+</footer>
 
 </body>
 
