--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -25,38 +25,38 @@
 </tr>
 <tr>
     <td>9:15 - 10:15 </td>
-    <td> <a href="" target="_self">  OE</a></td>
-     <td> <a href="" target="_self">  OE</a></td>
-      <td> <a href="" target="_self">  OE</a></td> 
-      <td> <a href="" target="_self">  SPC</a></td> 
-      <td> <a href="" target="_self">  AP</a></td>
-      <td rowspan="2"> <a href="" target="_self">  T3 SPC <br> T4 SPC </a></td> 
+    <td> <a href="" target="_self">  OOMD</a></td>
+     <td> <a href="" target="_self">  STQA</a></td>
+      <td> <a href="" target="_self">  LTA</a></td> 
+      <td> <a href="" target="_self">  LTA</a></td> 
+      <td> <a href="" target="_self">  LTA</a></td>
+      <td rowspan="2"> <a href="" target="_self">--</a></td> 
 </tr>         
 <tr>
     <td>10:15 - 11:15 </td>
-    <td> <a href="" target="_self">  SPC</a></td> 
-    <td> <a href="" target="_self">  IoT</a></td> 
-    <td> <a href="" target="_self">  DAA</a></td>
-     <td> <a href="" target="_self">  DAA</a></td> 
-     <td> <a href="" target="_self">   Cyber Security</a><br> ADHOC <br> Storage Networks </td>
+    <td> <a href="" target="_self">  EDP</a></td> 
+    <td> <a href="" target="_self">  OOMD</a></td> 
+    <td> <a href="" target="_self">  EDP</a></td>
+     <td> <a href="" target="_self">  STQA</a></td> 
+     <td> <a href="" target="_self">  ML </td>
 </tr>
 <tr>
-    <td>11:30 - 12:30 </td>
-    <td> <a href="" target="_self">  WP</a></td>
-    <td> <a href="" target="_self">  DAA</a></td> 
-    <td> <a href="" target="_self">  IoT</a></td> 
-    <td> <a href="" target="_self">  Cyber Security</a> <br> ADHOC <br> Storage Networks </td> 
-    <td> <a href="" target="_self">  Technical Writting</a></td> 
-    <td rowspan="2"> <a href="" target="_self">  Mini-Project</a></td>   
+    <td>11:30 - 13:30 </td>
+    <td> <a href="" target="_self">  T1(ADS)</a></td>
+    <td> <a href="" target="_self">  T1(ARVR)</a></td> 
+    <td> <a href="" target="_self">  T1(OOMD)</a></td> 
+    <td> <a href="" target="_self">  T1(ML)</td> 
+    <td> <a href="" target="_self">  T1(DT)</td> 
+    <td> <a href="" target="_self">---</a></td>   
 </tr>  
-<tr>
+/* <tr>
     <td>12:30 - 13:30 </td>
     <td> <a href="" target="_self">  AP</a></td>
      <td> <a href="" target="_self">  SPC</a></td>
      <td> <a href="" target="_self">  Cyber Security</a><br> ADHOC <br> Storage Networks </td> 
      <td> <a href="" target="_self">  IoT</a></td>
       <td> <a href="" target="_self">  WP</a></td>  
-</tr>
+</tr> 
 <tr>
     <td>14:15 - 16:15 </td>
     <td> <a href="" target="_self">  T1 DAA <br>T2 WP<br>T3 AP<br>T4 TW </a></td> 
