--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -11,7 +11,7 @@
 <link rel = "stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-<h2>TY Time-Table 2021 Sem V</h2>
+<h2>TY Time-Table 2022 Sem Ⅵ </h2>
 <h2> Div - A </h2>
 <!--
 <table>
@@ -71,7 +71,7 @@
 </table>
 -->
 
-<h1> face="Poiret One"> Under Maintanance:</h1>
+<h1>Under Maintanance:</h1>
 <p>&nbsp;</p><p>&nbsp;</p> 
 <p>&nbsp;</p><p>&nbsp;</p> 
 
