--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <h2>TY Time-Table 2021 Sem V</h2>
+    <h2>TY Time-Table 2022 Sem Ⅵ</h2>
     <h2> Div - B </h2>
 <!--
     <table >
@@ -72,7 +72,7 @@
 </table>
 -->
 
-<h1 align="center">face="Poiret One"> Under Maintanance:</h1>
+<h1>Under Maintanance:</h1>
 
 <footer class="footer">     
     <nav class="navigation">
@@ -86,8 +86,8 @@
           </ul>
         </div>
         <div class=" centerNav">
-                <ul>
-        <li>last Updated on :  1 Sep 2021 👨‍🔧</li>
+        <ul>
+        <li>last Updated on :  12 January 2022 👨‍🔧</li>
         </ul>
         </div>
         <div class="rightNav">  
